Create a signup page

--- a/templates/signup.pug
+++ b/templates/signup.pug
@@ -8,7 +8,7 @@ html(lang="en")
         title Sign Up
         link(rel="stylesheet", href="/styles/signup.css")
 body
-    h1 Sign Up
+    h1 I ❤️ The 80's youTube Tag fixing Sign Up page
     form(action="/signup", method="post")
         div
             label(for="email") Email:
