--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -58,7 +58,7 @@ html(lang="en")
                         input(type='text' name='searchTerm' value=searchTerm)
                     else
                         input(type='text' name='searchTerm')
-                    button(type='submit') Search by Artist
+                    button(type='submit') Search by Track
             tr
                 td
                     form(action='/listunverified' method='GET')
