Log the query...it's slow

--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -82,9 +82,9 @@ html(lang="en")
         thead
             tr
                 th youTube Link
-                th YouTube Artist Name
+                th youTube Artist Name
                 td Artist Display Name
-                th YouTube Track Name
+                th youTube Track Name
                 th Track Display Name
                 th Search Link
         tbody
