--- a/templates/instructions.pug
+++ b/templates/instructions.pug
@@ -7,13 +7,19 @@ html
             h1 Instructions for how to Earn RoboCoin
             h2 What are we trying to do here?
             p The tags on youTube videos are an absolute garbage fire. This means that as Mr. Roboto is trying to collate stats for the weekly countdown many tracks that are the same appear different.
-            p We'd like you to help us fix that by supplying Artist and Track "display" names that will be correct, and that Mr. Roboto can use
+
+            p We'd like you to help us fix that by supplying Artist and Track "display" names that will be correct, and that Mr. Roboto can use.
+
             p For example. If two people play the Marillion track The Uninvited Guest, but on one of the videos the title tag is actually "The Uninvited Guest - From Distant Lights", it won't be classed as the same thing. Worse than that some tracks have the Uploader's name as the artist name, or the track and artist name transposed...like I said, garbage fire!
+
             h2 How long does it take, and what do I get paid?
             p A lot of the fixes are a single click, so no time at all, and you get "paid" 0.02 RC for everything you fix. I know it doesn't sound a lot but it'll soon mount up. Depending on feedback and use, that figure may be adjusted, up or down ;-)
+
             h2 Signing up
             p In order for you to be able to work for RoboCoin, you'll need a password entered into the system. This is to prove you are you, and not link your username and accouunt so that Mr. Roboto can pay you correctly!
+
             p This password is entirely separate from the deepcuts.fm site, and is stored in an encrypted for in Mr. Roboto's database.  It cannot be decrypted or read back by anyone...even jodrell.
+
             p As a secondary form of authentication, and to stop people stealing accounts from others, you'll also need to add an email address into the system. This will only ever be used to verify you when you create your password. Mr. Roboto will NEVER email you!
             ol
                 li PM a Mod your the email address you want to use for verification. They will add it to the system
@@ -22,8 +28,10 @@ html
                 li Enter your current username
                 li Enter and verify the password you want to use
                 li Click "Sign Up"
+
             h2 Work time!!!
             p Browse to http://141.147.86.68:8585/listunverified and log in if necessary. You'll see a list of YouTube videos that have either the artist or track name unverified
+
             p There are 6 columns containing the info
             ol
                 li "youTube Link": This is the unique youTube identifier. If you click on it a new tab will open playing that vid on youTube. Handy if you don't recognise the track
@@ -32,3 +40,5 @@ html
                 li "youTube Track Name": This is the track name tag we got from youTube. If you click on this link the page will refresh with a refined search based only on that Track name
                 li "Track Display Name": This is either the corrected Track name and a Reset button that will remove that fix, or a text box containing the youTube value that you can edit and click "Update Track Name" to send the change to the DB
                 li "Search Link": This is a link that will open a Google search for the artist and track name...again, useful if the tags are really bad, or you want to verify the spelling etc
+
+            p
