--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -40,7 +40,7 @@ html(lang="en")
                     label
                         input(type='radio' name='sort' value='track' checked=sort === 'track')
                         | By Track
-                    button(type='submit') Get tracks
+                    button(type='submit') Get unverified tracks
             tr
             td
                 form(action='/listunverified' method='GET')
