Log the query...it's slow

--- a/templates/instructions.pug
+++ b/templates/instructions.pug
@@ -94,3 +94,6 @@ html
             p The artist should be set to the artist performing the track, and the track name should be correct, without and extra "cover of" etc etc
             p eg. we have Chris Cornell as an artist, and "Nothing Compares 2 U" (Prince Cover) [Live @ SiriusXM] | Lithium as a track name
             p The artist name should remain as Chris Cornell, and the Track name should be changed to "Nothing Compares 2 U"
+
+            h2 Thanks for the help!
+            p Thank you for any fixes you can do. If you have any ideas on how the process could be improved, or any other feedback, please let one of the Mods in the room know, or post on the Facebook group
