Log the query...it's slow

--- a/templates/instructions.pug
+++ b/templates/instructions.pug
@@ -30,7 +30,7 @@ html
                 li Click "Sign Up"
 
             h2 What is all this?!?
-            p Browse to http://141.147.86.68:8585/listunverified and log in if necessary. You'll see a list of YouTube videos that have either the artist or track name unverified
+            p Browse to a(href='http://141.147.86.68:8585/listunverified') http://141.147.86.68:8585/listunverified and log in if necessary. You'll see a list of YouTube videos that have either the artist or track name unverified
 
             p There are 6 columns containing the info
             ol
@@ -64,7 +64,9 @@ html
             h2 Examples
             p The following are all youTube tags for an Artist that should correctly be set to Motörhead
             ul
-                li Motörhead
+                li Motorhead
+                li Motör head
+                li Motor head
                 li MOTÖRHEAD
                 li Motörhead Official
 
