--- a/templates/instructions.pug
+++ b/templates/instructions.pug
@@ -23,15 +23,17 @@ html
             p As a secondary form of authentication, and to stop people stealing accounts from others, you'll also need to add an email address into the system. This will only ever be used to verify you when you create your password. Mr. Roboto will NEVER email you!
             ol
                 li PM a Mod your the email address you want to use for verification. They will add it to the system
-                li Browse to http://141.147.86.68:8585/signup
+                li Browse to
+                    a(href='http://141.147.86.68:8585/listunverified') http://141.147.86.68:8585/signup
                 li Enter the email address you gave
                 li Enter your current username
                 li Enter and verify the password you want to use
                 li Click "Sign Up"
 
             h2 What is all this?!?
-            p Browse to a(href='http://141.147.86.68:8585/listunverified') http://141.147.86.68:8585/listunverified and log in if necessary. You'll see a list of YouTube videos that have either the artist or track name unverified
-
+            p Browse to
+                a(href='http://141.147.86.68:8585/listunverified') http://141.147.86.68:8585/listunverified
+                |  and log in if necessary. You'll see a list of YouTube videos that have either the artist or track name unverified.
             p There are 6 columns containing the info
             ol
                 li "youTube Link": This is the unique youTube identifier. If you click on it a new tab will open playing that vid on youTube. Handy if you don't recognise the track
