Log the query...it's slow

--- a/templates/instructions.pug
+++ b/templates/instructions.pug
@@ -2,6 +2,11 @@ doctype html
 html
     head
         title Instructions for how to Earn RoboCoin
+        link(href='/styles/app.css' rel='stylesheet' type='text/css')
+        link(href='/modules/dragula/dist/dragula.css' rel='stylesheet' type='text/css')
+        link(href="/modules/@fortawesome/fontawesome-free/css/fontawesome.css" rel="stylesheet")
+        link(href="/modules/@fortawesome/fontawesome-free/css/solid.css" rel="stylesheet")
+
     body
         div.container
             h1 Instructions for how to Earn RoboCoin
