--- a/templates/instructions.pug
+++ b/templates/instructions.pug
@@ -43,7 +43,8 @@ html
                 li "Track Display Name": This is either the corrected Track name and a Reset button that will remove that fix, or a text box containing the youTube value that you can edit and click "Update Track Name" to send the change to the DB
                 li "Search Link": This is a link that will open a Google search for the artist and track name...again, useful if the tags are really bad, or you want to verify the spelling etc
 
-            p img(src="./images/beforeFixes.png", alt="Data screen showing Journey tracks, most of which have not been fixed")
+            p
+                img(src="./images/beforeFixes.png", alt="Data screen showing Journey tracks, most of which have not been fixed")
 
             p Above the columns there are a number of ways to refine the searches. I've found you can do things faster if you try and fix tracks by a particular band for instance.
 
