Serve static images

--- a/templates/instructions.pug
+++ b/templates/instructions.pug
@@ -44,7 +44,7 @@ html
                 li "Search Link": This is a link that will open a Google search for the artist and track name...again, useful if the tags are really bad, or you want to verify the spelling etc
 
             p
-                img(src="../images/beforeFixes.png", alt="Data screen showing Journey tracks, most of which have not been fixed")
+                img(src="/images/beforeFixes.png", alt="Data screen showing Journey tracks, most of which have not been fixed")
 
             p Above the columns there are a number of ways to refine the searches. I've found you can do things faster if you try and fix tracks by a particular band for instance.
 
