Serve static images

--- a/templates/instructions.pug
+++ b/templates/instructions.pug
@@ -43,9 +43,8 @@ html
                 li "Track Display Name": This is either the corrected Track name and a Reset button that will remove that fix, or a text box containing the youTube value that you can edit and click "Update Track Name" to send the change to the DB
                 li "Search Link": This is a link that will open a Google search for the artist and track name...again, useful if the tags are really bad, or you want to verify the spelling etc
 
-            p
+            p Here's an example screen showing the data before most of it is fixed
                 img(src="/images/beforeFixes.png", alt="Data screen showing Journey tracks, most of which have not been fixed")
-
             p Above the columns there are a number of ways to refine the searches. I've found you can do things faster if you try and fix tracks by a particular band for instance.
 
             p There are 3 search you can perform. Each search allows you to order the results by either when they  were played (By Recent), by Artist name or by track name. You can do that by clicking one of the radio buttons
@@ -65,6 +64,9 @@ html
             p I wonder what other tracks 'Til Tuuesday have in the DB, and if they need fixing. Enter "tuesday" in text box next to the "Search by Artist" button and click it. You'll now see any tracks by any artist that has a partial match for the word Tuesday and all of their data
 
             p you can more quickly do this kind of search by clicking either the Artist or Track names in the youTube column names. Click and search around and find whatever needs fixing!
+
+            p Here's the same example screen as above, but this time all the data has been fixed
+                img(src="/images/afterFixes.png", alt="Data screen showing Journey tracks, all of which have now been fixed")
 
             h2 Examples
             p The following are all youTube tags for an Artist that should correctly be set to Motörhead
