--- a/templates/instructions.pug
+++ b/templates/instructions.pug
@@ -102,20 +102,15 @@ html
             h2 FAQ
             div
                 div
-                    p Q: What happens if I apply an incorrect fix?
-                    p A: If you can remember the track or artist name, search for it, press the Reset button and fix it again.
+                    p <strong>Q:</strong> What happens if I apply an incorrect fix?<br><strong>A:</strong> If you can remember the track or artist name, search for it, press the Reset button and fix it again.
                 div
-                    p Q: How do I know what's "right"?
-                    p A: There's no one definitive source, but Wikipedia is probably a pretty good start. If you're unsure, please ask. In this case consistency is more important that being absolutely correct, so also search to see how other similar tracks have been fixed.
+                    p <strong>Q:</strong> How do I know what's "right"?<br><strong>A:</strong> There's no one definitive source, but Wikipedia is probably a pretty good start. If you're unsure, please ask. In this case consistency is more important that being absolutely correct, so also search to see how other similar tracks have been fixed.
                 div
-                    p Q: I forgot my password, what do I do?
-                    p A: It's all a bit manual right now. Contact a Mod and they'll get your password reset. You'll then have to signup again using the email address you provided to create a new password.
+                    p <strong>Q:</strong> I forgot my password, what do I do?<br><strong>A:</strong> It's all a bit manual right now. Contact a Mod and they'll get your password reset. You'll then have to signup again using the email address you provided to create a new password.
                 div
-                    p Q: I forgot the email address I used?!?
-                    p A: Send your email address to a Mod who can reset it for you.
+                    p <strong>Q:</strong> I forgot the email address I used?!?<br><strong>A:</strong> Send your email address to a Mod who can reset it for you.
                 div
-                    p Q: So what about covers?
-                    p A: The artist should be set to the artist performing the track, and the track name should be correct, without and extra "cover of" etc etc. eg. we have Chris Cornell as an artist, and "Nothing Compares 2 U" (Prince Cover) [Live @ SiriusXM] | Lithium as a track name. The artist name should remain as Chris Cornell, and the Track name should be changed to "Nothing Compares 2 U"
+                    p <strong>Q:</strong> So what about covers?<br><strong>A:</strong> The artist should be set to the artist performing the track, and the track name should be correct, without and extra "cover of" etc etc. eg. we have Chris Cornell as an artist, and "Nothing Compares 2 U" (Prince Cover) [Live @ SiriusXM] | Lithium as a track name. The artist name should remain as Chris Cornell, and the Track name should be changed to "Nothing Compares 2 U"
 
             h2 Thanks for the help!
             p Thank you for any fixes you can do. If you have any ideas on how the process could be improved, or any other feedback, please let one of the Mods in the room know, or post on the Facebook group
