--- a/templates/instructions.pug
+++ b/templates/instructions.pug
@@ -87,17 +87,17 @@ html
             p Things can get trickier with track names, especially where remixes come in. Remember what we're trying to do here is be able to group plays together so that the stats add up and we can tell how popular things are.
             p All of the following should be considered to be the same Track name
             ul
-                li Track name (Alon Cohen Remix)
+                li Track name (old school video)
                 li Track name Live
                 li Track name (Synthwave Remix)
-                li Track name (12" Extended Remix) 1988
+                li Track name (12" Mix) 1988
                 li Track name remix by Astrophysics
                 li Track name Remix - Robot Dance Vs. Break Dance
                 li Track name (Music Video) HD
                 li Track name - 7" 1986
                 li Track name - Artist Name
                 li "Track name"
-                li Track name (live video)
+                li Track name (totp)
 
             h2 FAQ
             div
