--- a/templates/instructions.pug
+++ b/templates/instructions.pug
@@ -72,8 +72,8 @@ html
             p The following are all youTube tags for an Artist that should correctly be set to Motörhead
             ul
                 li Motorhead
+                li Mötörhead
                 li Motör head
-                li Motor head
                 li MOTÖRHEAD
                 li Motörhead Official
 
@@ -111,6 +111,8 @@ html
                     p <strong>Q:</strong> I forgot the email address I used?!?<br><strong>A:</strong> Send your email address to a Mod who can reset it for you.
                 div
                     p <strong>Q:</strong> So what about covers?<br><strong>A:</strong> The artist should be set to the artist performing the track, and the track name should be correct, without and extra "cover of" etc etc. eg. we have Chris Cornell as an artist, and "Nothing Compares 2 U" (Prince Cover) [Live @ SiriusXM] | Lithium as a track name. The artist name should remain as Chris Cornell, and the Track name should be changed to "Nothing Compares 2 U"
+                div
+                    p <strong>Q:</strong> Does capitalisation matter?<br><strong>A:</strong> Not for the chart stats no, but for Artists with accents, like Motörhead, it is important to be consistent in where and how the accent's are used
 
-            h2 Thanks for the help!
+        h2 Thanks for the help!
             p Thank you for any fixes you can do. If you have any ideas on how the process could be improved, or any other feedback, please let one of the Mods in the room know, or post on the Facebook group
