--- a/templates/instructions.pug
+++ b/templates/instructions.pug
@@ -30,7 +30,10 @@ html
                 li Enter and verify the password you want to use
                 li Click "Sign Up"
 
-            h2 What is all this?!?
+        h2 Here's an example screen showing the data before most of it is fixed after I've searched for the Artist Journey...more on that below
+            img(src="/images/beforeFixes.png", alt="Data screen showing Journey tracks, most of which have not been fixed")
+
+        h2 What is all this?!?
             p Browse to
                 a(href='http://141.147.86.68:8585/listunverified') http://141.147.86.68:8585/listunverified
                 |  and log in if necessary. You'll see a list of YouTube videos that have either the artist or track name unverified.
@@ -43,8 +46,6 @@ html
                 li "Track Display Name": This is either the corrected Track name and a Reset button that will remove that fix, or a text box containing the youTube value that you can edit and click "Update Track Name" to send the change to the DB
                 li "Search Link": This is a link that will open a Google search for the artist and track name...again, useful if the tags are really bad, or you want to verify the spelling etc
 
-            h3 Here's an example screen showing the data before most of it is fixed
-                img(src="/images/beforeFixes.png", alt="Data screen showing Journey tracks, most of which have not been fixed")
             p Above the columns there are a number of ways to refine the searches. I've found you can do things faster if you try and fix tracks by a particular band for instance.
 
             p There are 3 search you can perform. Each search allows you to order the results by either when they  were played (By Recent), by Artist name or by track name. You can do that by clicking one of the radio buttons
@@ -55,17 +56,15 @@ html
 
             h2 Work time...what do I actually do?
 
-            p Currently the first line of my list has a corrected tag "'Til Tuesday" for the artist, and a youTube track name of "Winning The War - 3/26/1986 - Ritz". That track name is displayed in both the youTube Track Name column, showing that it's the original tag, and also in the text box in the Track Display Name column
+            p Currently the first line of my list has Journey listed as the youTube tag, but it's not been set as the Display Name yet. Click the Update Artist button to set that as it's correct. Do the same on the next line down
 
-            p I'm not familier with that track so I click the search link and find a number of other tracks also with the partial name "3/26/1986 - Ritz", as well as a track called "Winning the War"
+            p All of the other Artists are correct, apart from the last line which has the title and artist name in it. Edit the text box to just say "Journey" and click "Update Artist"
 
-            p I'll edit the contents of the text box down to just Winning the War and click "Update Track Name". When I click that the page will refresh, and in this case that line will disappear because both the Artist and Track names are now verified
-
-            p I wonder what other tracks 'Til Tuuesday have in the DB, and if they need fixing. Enter "tuesday" in text box next to the "Search by Artist" button and click it. You'll now see any tracks by any artist that has a partial match for the word Tuesday and all of their data
+            p Now onto the track names. The first line has "Any Way You Want It (Official Video - 1980)" clearly is too much info. Edit the text box, change it to "Any Way You Want It" and click "Update Track Name"
 
             p you can more quickly do this kind of search by clicking either the Artist or Track names in the youTube column names. Click and search around and find whatever needs fixing!
 
-            h3 Here's the same example screen as above, but this time all the data has been fixed
+            h2 Here's the same example screen as above, but this time all the data has been fixed
                 img(src="/images/afterFixes.png", alt="Data screen showing Journey tracks, all of which have now been fixed")
 
             h2 Examples
@@ -84,35 +83,36 @@ html
                 li Whole Lotta Rosie (Official Video)
                 li AC/DC Whole Lotta Rosie (Bon Scott) Live 1977
                 li Whole Lotta Rosie (live)
-            p Things can get trickier with track names, especially where remixes come in. Remember what we're trying to do here is be able to group plays together so that the stats add up and we can tell how popular things are.
-            p All of the following should be considered to be the same Track name
+            p Things can get trickier with track names, especially where remixes come in. Remember what we're trying to do here is be able to group plays together so that the stats add up for the countdown.
+            p All of the following should be considered to be the same Track and renamed to Mr. Roboto
             ul
-                li Track name (old school video)
-                li Track name Live
-                li Track name (Synthwave Remix)
-                li Track name (12" Mix) 1988
-                li Track name remix by Astrophysics
-                li Track name Remix - Robot Dance Vs. Break Dance
-                li Track name (Music Video) HD
-                li Track name - 7" 1986
-                li Track name - Artist Name
-                li "Track name"
-                li Track name (totp)
+                li Mr. Roboto (old school video)
+                li Mr. Roboto Live
+                li Mr. Roboto (Synthwave Remix)
+                li Mr. Roboto (12" Mix) 1988
+                li Mr. Roboto remix by Astrophysics
+                li Mr. Roboto Remix - Robot Dance Vs. Break Dance
+                li Mr. Roboto (Music Video) HD
+                li Mr. Roboto - 7" 1986
+                li Mr. Roboto - Artist Name
+                li "Mr. Roboto"
+                li Mr Roboto
+                li MrRoboto
 
-            h2 FAQ
+    h2 FAQ
+        div
             div
-                div
-                    p <strong>Q:</strong> What happens if I apply an incorrect fix?<br><strong>A:</strong> If you can remember the track or artist name, search for it, press the Reset button and fix it again.
-                div
-                    p <strong>Q:</strong> How do I know what's "right"?<br><strong>A:</strong> There's no one definitive source, but Wikipedia is probably a pretty good start. If you're unsure, please ask. In this case consistency is more important that being absolutely correct, so also search to see how other similar tracks have been fixed.
-                div
-                    p <strong>Q:</strong> I forgot my password, what do I do?<br><strong>A:</strong> It's all a bit manual right now. Contact a Mod and they'll get your password reset. You'll then have to signup again using the email address you provided to create a new password.
-                div
-                    p <strong>Q:</strong> I forgot the email address I used?!?<br><strong>A:</strong> Send your email address to a Mod who can reset it for you.
-                div
-                    p <strong>Q:</strong> So what about covers?<br><strong>A:</strong> The artist should be set to the artist performing the track, and the track name should be correct, without and extra "cover of" etc etc. eg. we have Chris Cornell as an artist, and "Nothing Compares 2 U" (Prince Cover) [Live @ SiriusXM] | Lithium as a track name. The artist name should remain as Chris Cornell, and the Track name should be changed to "Nothing Compares 2 U"
-                div
-                    p <strong>Q:</strong> Does capitalisation matter?<br><strong>A:</strong> Not for the chart stats no, but for Artists with accents, like Motörhead, it is important to be consistent in where and how the accent's are used
+                p <strong>Q:</strong> What happens if I apply an incorrect fix?<br><strong>A:</strong> If you can remember the track or artist name, search for it, press the Reset button and fix it again.
+            div
+                p <strong>Q:</strong> How do I know what's "right"?<br><strong>A:</strong> There's no one definitive source, but Wikipedia is probably a pretty good start. If you're unsure, please ask. In this case consistency is more important that being absolutely correct, so also search to see how other similar tracks have been fixed.
+            div
+                p <strong>Q:</strong> I forgot my password, what do I do?<br><strong>A:</strong> It's all a bit manual right now. Contact a Mod and they'll get your password reset. You'll then have to signup again using the email address you provided to create a new password.
+            div
+                p <strong>Q:</strong> I forgot the email address I used?!?<br><strong>A:</strong> Send your email address to a Mod who can reset it for you.
+            div
+                p <strong>Q:</strong> So what about covers?<br><strong>A:</strong> The artist should be set to the artist performing the track, and the track name should be correct, without and extra "cover of" etc etc. eg. we have Chris Cornell as an artist, and "Nothing Compares 2 U" (Prince Cover) [Live @ SiriusXM] | Lithium as a track name. The artist name should remain as Chris Cornell, and the Track name should be changed to "Nothing Compares 2 U"
+            div
+                p <strong>Q:</strong> Does capitalisation matter?<br><strong>A:</strong> Not for the chart stats no, but for Artists with accents, like Motörhead, it is important to be consistent in where and how the accent's are used
 
-        h2 Thanks for the help!
-            p Thank you for any fixes you can do. If you have any ideas on how the process could be improved, or any other feedback, please let one of the Mods in the room know, or post on the Facebook group
+    h2 Thanks for the help!
+        p Thank you for any fixes you can do. If you have any ideas on how the process could be improved, or any other feedback, please let one of the Mods in the room know, or post on the Facebook group
