--- a/templates/instructions.pug
+++ b/templates/instructions.pug
@@ -21,7 +21,7 @@ html
 
         p As a secondary form of authentication, and to stop people stealing accounts from others, you'll also need to add an email address into the system. This will only ever be used to verify you when you create your password. Mr. Roboto will NEVER email you!
         ol
-            li PM a Mod your the email address you want to use for verification. They will add it to the system
+            li PM a Mod the email address you want to use for verification. They will add it to the system
             li Browse to 
                 a(href='http://141.147.86.68:8585/listunverified') http://141.147.86.68:8585/signup
             li Enter the email address you gave
