--- a/templates/instructions.pug
+++ b/templates/instructions.pug
@@ -25,7 +25,7 @@ html
             li Browse to 
                 a(href='http://141.147.86.68:8585/listunverified') http://141.147.86.68:8585/signup
             li Enter the email address you gave
-            li Enter your current username
+            li Enter your full current DJ name
             li Enter and verify the password you want to use
             li Click "Sign Up"
             li You can now browse to 
