Fix the signup redirect issue

--- a/templates/signup.pug
+++ b/templates/signup.pug
@@ -13,7 +13,7 @@ body
             label(for="email") Email:
             input(type="email", id="email", name="email", required)
         div
-            label(for="username") Username:
+            label(for="username") Current Full DJ Name:
             input(type="text", id="username", name="username", required)
         div
             label(for="password") Password:
