--- a/templates/instructions.pug
+++ b/templates/instructions.pug
@@ -111,6 +111,8 @@ html
             p <strong>Q:</strong> So what about covers?<br><strong>A:</strong> The artist should be set to the artist performing the track, and the track name should be correct, without and extra "cover of" etc etc. eg. we have Chris Cornell as an artist, and "Nothing Compares 2 U" (Prince Cover) [Live @ SiriusXM] | Lithium as a track name. The artist name should remain as Chris Cornell, and the Track name should be changed to "Nothing Compares 2 U"
         div
             p <strong>Q:</strong> Does capitalisation matter?<br><strong>A:</strong> Not for the chart stats no, but for Artists with accents, like Motörhead, it is important to be consistent in where and how the accent's are used
+        div
+            p <strong>Q:</strong> LOL, let's make Robo read everything out as being by Michael Bolton!<br><strong>A:</strong> As with all RoboCoin operations, this processes is audited. Deliberate vandalism of the data will result in access to the tool being revoked and a room ban for the user
 
         h2 Thanks for the help!
         p Thank you for any fixes you can do. If you have any ideas on how the process could be improved, or any other feedback, please let one of the Mods in the room know, or post on the Facebook group
