--- a/templates/instructions.pug
+++ b/templates/instructions.pug
@@ -75,6 +75,11 @@ html
             li MOTÖRHEAD
             li Motörhead Official
 
+        p The following are all youTube tags for an Artist that should correctly be set to Huey Lewis & The News
+        ul
+            li Huey Lewis And The News
+            li Huey Lewis
+
         p The following are all youTube tags for a Track that should correctly be set to Whole Lotta Rosie
         ul
             li Whole Lotta Rosie
