--- a/templates/instructions.pug
+++ b/templates/instructions.pug
@@ -75,12 +75,13 @@ html
             li MOTÖRHEAD
             li Motörhead Official
 
-        p The following are all youTube tags for an Artist that should correctly be set to Huey Lewis & The News
+        p The following are all youTube tags for an Artist that should correctly be set to Huey Lewis & The News. If youu're not sure what somethign should be set to, search and see what's been used for other tracks. In this case an artist search for huey found these alternatives
         ul
             li Huey Lewis And The News
             li Huey Lewis
+            li Huey Lewis/The News
 
-        p The following are all youTube tags for a Track that should correctly be set to Whole Lotta Rosie
+    p The following are all youTube tags for a Track that should correctly be set to Whole Lotta Rosie
         ul
             li Whole Lotta Rosie
             li Whole Lotta Rosie (Official Audio)
