--- a/templates/instructions.pug
+++ b/templates/instructions.pug
@@ -81,6 +81,12 @@ html
             li Huey Lewis
             li Huey Lewis/The News
 
+        p Be careful with punctuation might be included in a track or Artist name. Remember to search to see what's been used elsewhere...consistency is key. The following tracks are not the same, but should be
+        ul
+            li Born in the U.S.A.
+            li Born in the USA
+            li Born in the U.S.A
+
     p The following are all youTube tags for a Track that should correctly be set to Whole Lotta Rosie
         ul
             li Whole Lotta Rosie
