--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -28,10 +28,17 @@ html(lang="en")
     h1 Current list of unverified songs from Robo's DB
     // Reference the stats object
     if stats
-        ul
-            each value, key in stats
-                li #{key}: #{value}
-
+        table
+            tbody
+                tr
+                td(style="text-align: right;") Total tracks in DB:
+                td #{stats.Total}
+                tr
+                td(style="text-align: right;") Fixed tracks count:
+                td #{stats.Fixed}
+                tr
+                td(style="text-align: right;") Unfixed track count:
+                td #{stats.Unfixed}
     table
         tbody
             tr
