--- a/templates/instructions.pug
+++ b/templates/instructions.pug
@@ -9,23 +9,26 @@ html
 
         p We'd like you to help us fix that by supplying Artist and Track "display" names that will be correct, and that Mr. Roboto can use.
 
-        p For example. If two people play the Marillion track The Uninvited Guest, but on one of the videos the title tag is actually "The Uninvited Guest - From Distant Lights", it won't be classed as the same thing. Worse than that some tracks have the Uploader's name as the artist name, or the track and artist name transposed...like I said, garbage fire!
+        p For example. If two people play the Marillion track The Uninvited Guest, but on one of the videos the title tag is actually "The Uninvited Guest - From Distant Lights", it won't be classed as the same thing. Worse than that some tracks have the uploader's name as the artist name, or the track and artist name transposed...like I said, garbage fire!
 
         h2 How long does it take, and what do I get paid?
         p A lot of the fixes are a single click, so no time at all, and you get "paid" 0.02 RC for everything you fix. I know it doesn't sound a lot but it'll soon mount up. Depending on feedback and use, that figure may be adjusted, up or down ;-)
 
         h2 Signing up
-        p In order for you to be able to work for RoboCoin, you'll need a password entered into the system. This is to prove you are you, and not link your username and accouunt so that Mr. Roboto can pay you correctly!
+        p In order for you to be able to work for RoboCoin, you'll need a password entered into the system. This is to prove you are you, and not link your username and account so that Mr. Roboto can pay you correctly!
 
         p This password is entirely separate from the deepcuts.fm site, and is stored in an encrypted for in Mr. Roboto's database.  It cannot be decrypted or read back by anyone...even jodrell.
 
         p As a secondary form of authentication, and to stop people stealing accounts from others, you'll also need to add an email address into the system. This will only ever be used to verify you when you create your password. Mr. Roboto will NEVER email you!
         ol
-            li PM a Mod the email address you want to use for verification. They will add it to the system
+            li
+                | PM a Mod the email address you want to use for verification. They will add it to the system. You 
+                strong CANNOT 
+                | signup until this step is complete            
             li Browse to 
                 a(href='http://141.147.86.68:8585/listunverified') http://141.147.86.68:8585/signup
             li Enter the email address you gave
-            li Enter your full current DJ name
+            li Enter your full current DJ name, NOT your ttfm username
             li Enter and verify the password you want to use
             li Click "Sign Up"
             li You can now browse to 
@@ -75,7 +78,7 @@ html
             li MOTÖRHEAD
             li Motörhead Official
 
-        p The following are all youTube tags for an Artist that should correctly be set to Huey Lewis & The News. If youu're not sure what somethign should be set to, search and see what's been used for other tracks. In this case an artist search for huey found these alternatives
+        p The following are all youTube tags for an Artist that should correctly be set to Huey Lewis & The News. If you're not sure what something should be set to, search and see what's been used for other tracks. In this case an artist search for huey found these alternatives
         ul
             li Huey Lewis And The News
             li Huey Lewis
