--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -26,70 +26,78 @@ html(lang="en")
 
     body
     h1 Current list of unverified songs from Robo's DB
-    // Reference the stats object
-    if stats
-        table
-            tbody
-                tr
-                td(style="text-align: right;") Total tracks in DB:
-                td #{stats.Total}
-                tr
-                td(style="text-align: right;") Fixed tracks count:
-                td #{stats.Fixed}
-                tr
-                td(style="text-align: right;") Unfixed track count:
-                td #{stats.Unfixed}
     table
         tbody
             tr
             td
-                form(action='/listunverified' method='GET')
-                    label
-                        input(type='radio' name='sort' value='time' checked=sort === 'time')
-                        | By Recent
-                    label
-                        input(type='radio' name='sort' value='artist' checked=sort === 'artist')
-                        | By Artist
-                    label
-                        input(type='radio' name='sort' value='track' checked=sort === 'track')
-                        | By Track
-                    button(type='submit') Get unverified tracks
-            tr
+                if dbStats
+                    table
+                        tbody
+                            tr
+                            td(style="text-align: right;") Total tracks in DB:
+                            td #{stats.Total}
+                            tr
+                            td(style="text-align: right;") Fixed tracks count:
+                            td #{stats.Fixed}
+                            tr
+                            td(style="text-align: right;") Unfixed track count:
+                            td #{stats.Unfixed}
+                table
+                    tbody
+                        tr
+                        td
+                            form(action='/listunverified' method='GET')
+                                label
+                                    input(type='radio' name='sort' value='time' checked=sort === 'time')
+                                    | By Recent
+                                label
+                                    input(type='radio' name='sort' value='artist' checked=sort === 'artist')
+                                    | By Artist
+                                label
+                                    input(type='radio' name='sort' value='track' checked=sort === 'track')
+                                    | By Track
+                                button(type='submit') Get unverified tracks
+                        tr
+                        td
+                            form(action='/listunverified' method='GET')
+                                label
+                                    input(type='radio' name='sort' value='time' checked=sort === 'time')
+                                    | By Recent
+                                label
+                                    input(type='radio' name='sort' value='artist' checked=sort === 'artist')
+                                    | By Artist
+                                label
+                                    input(type='radio' name='sort' value='track' checked=sort === 'track')
+                                    | By Track
+                                input(type='hidden' name='where' value="track")
+                                if ( searchTerm )
+                                    input(type='text' name='searchTerm' value=searchTerm)
+                                else
+                                    input(type='text' name='searchTerm')
+                                button(type='submit') Search by Track
+                        tr
+                            td
+                                form(action='/listunverified' method='GET')
+                                    label
+                                        input(type='radio' name='sort' value='time' checked=sort === 'time')
+                                        | By Recent
+                                    label
+                                        input(type='radio' name='sort' value='artist' checked=sort === 'artist')
+                                        | By Artist
+                                    label
+                                        input(type='radio' name='sort' value='track' checked=sort === 'track')
+                                        | By Track
+                                    input(type='hidden' name='where' value="artist")
+                                    if ( searchTerm )
+                                        input(type='text' name='searchTerm' value=searchTerm)
+                                    else
+                                        input(type='text' name='searchTerm')
+                                    button(type='submit') Search by Artist
             td
-                form(action='/listunverified' method='GET')
-                    label
-                        input(type='radio' name='sort' value='time' checked=sort === 'time')
-                        | By Recent
-                    label
-                        input(type='radio' name='sort' value='artist' checked=sort === 'artist')
-                        | By Artist
-                    label
-                        input(type='radio' name='sort' value='track' checked=sort === 'track')
-                        | By Track
-                    input(type='hidden' name='where' value="track")
-                    if ( searchTerm )
-                        input(type='text' name='searchTerm' value=searchTerm)
-                    else
-                        input(type='text' name='searchTerm')
-                    button(type='submit') Search by Track
-            tr
-                td
-                    form(action='/listunverified' method='GET')
-                        label
-                            input(type='radio' name='sort' value='time' checked=sort === 'time')
-                            | By Recent
-                        label
-                            input(type='radio' name='sort' value='artist' checked=sort === 'artist')
-                            | By Artist
-                        label
-                            input(type='radio' name='sort' value='track' checked=sort === 'track')
-                            | By Track
-                        input(type='hidden' name='where' value="artist")
-                        if ( searchTerm )
-                            input(type='text' name='searchTerm' value=searchTerm)
-                        else
-                            input(type='text' name='searchTerm')
-                        button(type='submit') Search by Artist
+                if djstats
+                    ol
+                        each value, key in djStats
+                            li #{key}: #{value}
 
     table#songqueue
         thead
