--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -35,13 +35,13 @@ html(lang="en")
                         tbody
                             tr
                             td(style="text-align: right;") Total tracks in DB:
-                            td #{stats.Total}
+                            td #{dbStats.Total}
                             tr
                             td(style="text-align: right;") Fixed tracks count:
-                            td #{stats.Fixed}
+                            td #{dbStats.Fixed}
                             tr
                             td(style="text-align: right;") Unfixed track count:
-                            td #{stats.Unfixed}
+                            td #{dbStats.Unfixed}
                 table
                     tbody
                         tr
