--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -94,7 +94,7 @@ html(lang="en")
                                         input(type='text' name='searchTerm')
                                     button(type='submit') Search by Artist
             td
-                if djstats
+                if djStats
                     ol
                         each value, key in djStats
                             li #{key}: #{value}
