--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -94,10 +94,12 @@ html(lang="en")
                                         input(type='text' name='searchTerm')
                                     button(type='submit') Search by Artist
             td(style="vertical-align: top;")
-                if djStats
+                if Array.isArray( djStats ) // Check if djStats is an array
                     ol
-                        each value, key in djStats.slice(0, 10)
+                        each value, key in djStats.slice(0, 10) // Slice the first 10 items
                             li #{key}: #{value}
+                else
+                    p DJ stats not available
 
     table#songqueue
         thead
