--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -96,8 +96,8 @@ html(lang="en")
             td(style="vertical-align: top;")
                 if djStats
                     ol
-                        each value, key in djStats
-                            li #{key}: #{value}
+                        each [key, value], index in djStats
+                            li #{index + 1}: #{key}, #{value}
 
     table#songqueue
         thead
