--- a/templates/instructions.pug
+++ b/templates/instructions.pug
@@ -101,17 +101,21 @@ html
         p All of the following should be considered to be the same Track and renamed to Mr. Roboto
         ul
             li Mr. Roboto (old school video)
-            li Mr. Roboto Live
             li Mr. Roboto (Synthwave Remix)
             li Mr. Roboto (12" Mix) 1988
-            li Mr. Roboto remix by Astrophysics
             li Mr. Roboto Remix - Robot Dance Vs. Break Dance
-            li Mr. Roboto (Music Video) HD
-            li Mr. Roboto - 7" 1986
-            li Mr. Roboto - Artist Name
             li "Mr. Roboto"
             li Mr Roboto
             li MrRoboto
+        p Capitalisation isn't important...but spaces are! For the matching upper and lower cases are recognised as the same, but double spaces will cause a missmatch
+            li
+            | Hot in the city 
+            strong
+            | IS the same as Hot In The City
+            li
+            | Hot  in  the  city 
+            strong IS NOT 
+            | the same as Hot In The City
 
         h2 FAQ
         div
