Display available RC

--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -41,7 +41,7 @@ html(lang="en")
                             td #{dbStats.Fixed}
                             tr
                             td(style="text-align: right;") Unfixed track count:
-                            td #{dbStats.Unfixed}
+                            td #{dbStats.Unfixed} = RC:#{availableRoboCoins} available to earn
                 table
                     tbody
                         tr
