Fix number of decimal places for value

--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -94,7 +94,7 @@ html(lang="en")
                                         input(type='text' name='searchTerm')
                                     button(type='submit') Search by Artist
             td(style="vertical-align: top;")
-                Top contributors
+                strong Top contributors
                 if djStats
                     ol
                         each value, key in djStats
