Fix number of decimal places for value

--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -34,13 +34,16 @@ html(lang="en")
                     table
                         tbody
                             tr
-                            td(style="text-align: right;") Total tracks in DB:
+                            td(style="text-align: right;")
+                            strong Total tracks in DB:
                             td #{dbStats.Total}
                             tr
-                            td(style="text-align: right;") Fixed tracks count:
+                            td(style="text-align: right;")
+                            strong Fixed tracks count:
                             td #{dbStats.Fixed}
                             tr
-                            td(style="text-align: right;") Unfixed track count:
+                            td(style="text-align: right;")
+                            strong Unfixed track count:
                             td #{dbStats.Unfixed} = RC:#{availableRoboCoins} available to earn
                 table
                     tbody
