Start new songInfo command

--- a/templates/listUnverifiedSongs.pug
+++ b/templates/listUnverifiedSongs.pug
@@ -39,11 +39,11 @@ html(lang="en")
                             td #{dbStats.Total}
                             tr
                             td(style="text-align: right;")
-                                strong Fixed tracks count:
+                                strong Fully fixed tracks:
                             td #{dbStats.Fixed}
                             tr
                             td(style="text-align: right;")
-                                strong Unfixed track count:
+                                strong Unfixed data count:
                             td #{dbStats.Unfixed} = RC:#{availableRoboCoins} available to earn
                 table
                     tbody
