Start new songInfo command

--- a/templates/instructions.pug
+++ b/templates/instructions.pug
@@ -3,6 +3,9 @@ html
     head
         title Instructions for how to Earn RoboCoin
     body
+        h1 Important Note...
+        p As with all RoboCoin operations, this processes is audited. Deliberate vandalism of the data will result in access to the tool being revoked. and a room ban for the user
+
         h1 Instructions for how to Earn RoboCoin
         h2 What are we trying to do here?
         p The tags on youTube videos are an absolute garbage fire. This means that as Mr. Roboto is trying to collate stats for the weekly countdown many tracks that are the same appear different.
@@ -84,11 +87,12 @@ html
             li Huey Lewis
             li Huey Lewis/The News
 
-        p Be careful with punctuation might be included in a track or Artist name. Remember to search to see what's been used elsewhere...consistency is key. The following tracks are not the same, but should be
+        p Be careful with punctuation might be included in a track or Artist name. Remember to search to see what's been used elsewhere...consistency is key. The following track titles are not the same, but should be, even though they might be by different artists
         ul
             li Born in the U.S.A.
             li Born in the USA
             li Born in the U.S.A
+            li Born in the U.S.A. (Bruce Springsteen cover)
 
     p The following are all youTube tags for a Track that should correctly be set to Whole Lotta Rosie
         ul
@@ -108,12 +112,10 @@ html
             li Mr Roboto
             li MrRoboto
         p Capitalisation isn't important...but spaces are! For the matching upper and lower cases are recognised as the same, but double spaces will cause a missmatch
-            li
-            | Hot in the city 
-            strong
-            | IS the same as Hot In The City
-            li
-            | Hot  in  the  city 
+            li | Hot in the city 
+            strong IS
+            | the same as Hot In The City
+            li | Hot  in  the  city 
             strong IS NOT 
             | the same as Hot In The City
 
